--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       .edgeLoad-EDGE-93243600 { visibility:hidden; }
   </style>
   <style>
-    #wrapper { width: 600px; margin: 0 auto; }
+    #wrapper { width: 600px; margin: 0 auto; min-height: 980px; }
     .title { text-align: center; font-family: "IM Fell Great Primer SC"; }
     .generate { text-align: center; }
     .generate > button { width: 150px; height: 32px; }
