No margin, no padding

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
       .edgeLoad-EDGE-93243600 { visibility:hidden; }
   </style>
   <style>
+    body { margin: 0; padding: 0; }
     #wrapper { width: 600px; margin: 0 auto; min-height: 980px; }
     .title { text-align: center; font-family: "IM Fell Great Primer SC"; }
     .generate { text-align: center; }
     .generate > button { width: 150px; height: 32px; }
+    #Stage { margin: 0; padding: 0; }
   </style>
 </head>
 
